force-app/main/default/objects/SAP_Warehouses__x/SAP_Warehouses__x.object-meta.xml
<CustomObject>
    <description>SAP_WarehousesSet</description>
    <externalDataSource>SAP</externalDataSource>
    <externalName>SAP_WarehousesSet</externalName>
    <label>SAP_Warehouses</label>
    <pluralLabel>SAP_WarehousesSet</pluralLabel>
</CustomObject>