force-app/main/default/objects/SAP_Warehouses__x/fields/Lgobe__c.field-meta.xml
<CustomField>
    <fullName>Lgobe__c</fullName>
    <description>Lgobe</description>
    <externalDeveloperName>Lgobe</externalDeveloperName>
    <label>Lgobe</label>
    <length>16</length>
    <type>Text</type>
</CustomField>