force-app/main/default/objects/SAP_Warehouses__x/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>Warehouse name</description>
    <externalDeveloperName>Lgobe</externalDeveloperName>
    <label>Name</label>
    <length>16</length>
    <type>Text</type>
</CustomField>