force-app/main/default/objects/SAP_Warehouses__x/fields/Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Warehouse__c</fullName>
    <description>Almacén (Lgort)</description>
    <externalDeveloperName>Lgort</externalDeveloperName>
    <label>Warehouse</label>
    <length>4</length>
    <type>Text</type>
</CustomField>